dist_man1_MANS=

if BUILD_UNDALD
  dist_man1_MANS+=undald.1
endif

if ENABLE_QT
  dist_man1_MANS+=undal-qt.1
endif

if BUILD_UNDAL_CLI
  dist_man1_MANS+=undal-cli.1
endif

if BUILD_UNDAL_TX
  dist_man1_MANS+=undal-tx.1
endif

if BUILD_UNDAL_UTIL
  dist_man1_MANS+=undal-util.1
endif

if ENABLE_WALLET
if BUILD_UNDAL_WALLET
  dist_man1_MANS+=undal-wallet.1
endif
endif
